# piano-accomp

./: .gitignore  CLAUDE.md  amazing_grace_accompanied.mid  eval_a_minor_melody.mid  eval_c_major_scale.mid  eval_chromatic_run.mid  eval_gospel_i_iv_v_i.mid  eval_repeated_c4.mid  pyproject.toml  test_gospel_output.mid  test_long_melody.mid  test_long_neural.mid  test_long_neural_v2.mid  test_long_retrieval.mid  test_long_retrieval_v2.mid  test_melody.mid  test_output.mid  test_retrieval.mid  test_rulechord.mid  vocal_test_accompanied.mid  vocal_test_gospel.mid  vocal_test_gospel_only.mid  vocal_test_real_gospel.mid  vocal_test_v2.mid  vocal_test_v3.mid
configs/: audio.yaml  inference.yaml  model.yaml  training.yaml
data/scripts/: download_pop909.py  preprocess.py
scripts/: accompany_audio.py  collect_data_modal.py  collect_data_modal_v2.py  collect_midicaps_modal.py  collect_youtube_gospel_modal.py  evaluate.py  finetune_gospel.py  run_offline_demo.py  run_realtime.py  run_retrieval_demo.py  run_retrieval_rulechord.py  run_simple_realtime.py  test_realtime_pipeline.py  train.py  train_modal.py
src/gospel/: augmentation.py  chord_vocabulary.py  voicing_rules.py
src/inference/: beat_tracker.py  pattern_retrieval.py  pitch_detector.py  realtime_engine.py  rule_chord.py  synthesizer.py
src/model/: chord_predictor.py  positional.py  texture_generator.py  transformer.py
src/tokenizer/: midi_tokenizer.py  vocab.py
src/training/: dataset.py  losses.py  metrics.py
tests/: test_model.py  test_tokenizer.py
